2015-12-22  Charlie Zender  <zender@uci.edu>

	* Re-assign some ncremap switches to be more heuristic

	* Add ncremap to documentation

2015-12-21  Charlie Zender  <zender@uci.edu>

	* Compare grid spans and interfaces in single-precision (e.g., to 180.0f, 360.0f) to be more error-tolerant

	* ncremap pass through dbg_lvl >= 3 to ncks, enable user-defined thr_nbr

2015-12-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.4-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-beta02 final changes';git push
	git tag -a 4.5.4-beta02 -m 'Version 4.5.4-beta02 new features: fix nfr lon 180; free nc_string patch';git push --tags

	* Check for lon == -180 not lon == 180 when inferring longitude	grid-type lon_typ

2015-12-18  Charlie Zender  <zender@uci.edu>

	* Use ignore environment to protect comments from PDF documentation (which ignores @c comment sentinels!)

2015-12-17  Charlie Zender  <zender@uci.edu>

	* Free var.val.sngp[:] before freeing var.val.vp in nco_prn.c (patch from Pedro)

2015-12-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-beta01 final changes';git push
	git tag -a 4.5.4-beta01 -m 'Version 4.5.4-beta01 new features: fix nfr cap grd; ncremap';git push --tags

	* Move grid-span check from curvilinear code to work for all grids

	* Restrict inferred rectangular lat boundaries to [-90.0,90.0] when extrapolating from grid centers

	* Propagate 20151214 commit *.g changes into *.[ch]pp files

2015-12-14  Charlie Zender  <zender@uci.edu>

	* Fix typo in AIRS HDF dimension name

2015-12-14  Henry Butowsky  <henryb@hush.com>

	* Fix assign when var is in input but not read during assign action e.g., time=10;
	  ncap2 -O -v -s 'one_dmn_rec_var=0' in.nc foo.nc;ncks -v one_dmn_rec_var -C -m -H foo.nc

2015-12-08  Charlie Zender  <zender@uci.edu>

	* sld_nco.sh now infers destination grid from -d dst_fl

	* Ignore masked values diagnostic grid span for curvilinear grids
